app/styles/main.scss
/* ... */
@media screen and (max-width: $break-small){
  #main-page {

    .spots-tagline {
      display: none;
    }

    .visualize-tagline {
      margin: 10px !important;
    }

    .addthis_toolbox {
      float: none;
      width: 200px;
      margin: 5px auto;
    }

    .nearby {
      display: none;
    }
  }
}

/******************
*** Listings Page / Home Page
*******************/
// TODO: refactor listing info separate from listings page
//       so listings page and home page are separate
#listings-page,
#home-page {
  min-height: 400px;

  .title-bar {
    @include page-element(10px, 10px, left, top);
    padding-bottom: 0;

    .main-col {
      padding-top: 20px;
    }

    .top {
      height: 80px;
      //margin-right: 60px;
      text-align: center;
      margin-right: 40px;
    }

    .bottom {
      margin-top: 8px;
    }

    .b4cm-icon {
      margin-top: -5px;
    }

    .listing-type {
      display: inline-block;
      padding: 0 0 0 20px;
    }

    .listing-location {
      @include text-overflow();
      color: $acc-dark;
      //display: inline-block;
      display: block;
      margin-top: 30px;
      //margin: 0 0 0 30px;
      //width: 350px;
    }

    form {
      margin: 5px 0 0 100px;
    }

    h4 {
      display: inline-block;
    }

    select {
      margin: -10px 0 0 10px;
      width: 80px;
    }

    input {
      margin: -10px 0 0 10px;
      text-align: center;
      width: 150px;
    }

    button {
      margin: -10px 0 0 10px;
    }

    .listing-nums {
      display: inline-block;
      margin: 5px 0 -5px 0;
      width: 300px;
    }

    .add-spot-btn {
      float: right;
      margin: -9px 0 0 0;
    }

  }

  .page {
    @include page-element(10px, 10px, left);
    min-height: 300px;
  }
  
  .listings {
  }

  .listing {
    margin: 0 0 10px 0;
    padding: 0 10px;

    &:hover {
      cursor: pointer;
    }

    h4, h5 {
      margin: 0px;
    }

    .address {
      max-width: 290px;
    }

    .rank, .info, .crowd-bar, .watchers, .box {
      display: inline-block;
    }

    .rank {
      float: left;
    }

    .spot-pic {
      display: inline-block;
      width: 85px;
      height: 85px;
      padding: 0 5px;
      margin-top: -95px;
    }

    .info {
      padding: 0 0 0 5px;
    }

    .watchers {
      display: inline-block;
      margin: 4px 0 0 5px;
      vertical-align: top;
    }

    .crowd-rank {
      margin: 5px 0 0 0;
    }

    .stars {
      img {
        height: 25px;
        width: 25px;
      }
    }

    .box {
      height: 25px;
      width: 25px;

      h6 {
        color: $acc-light;
        display: inline;
        float: left;
        font-size: 10px;
        margin: 8px 0 0 2px;
      }
    }

    hr {
      margin-top: 15px;
      width: 100%;
    }

    .current-status {
      display: inline-block;
      float: left;
      margin: -90px 0 0 430px;
    }

    .status {
      margin: 0 0 0 68px;
    }

  }

  .map {
    margin: 0 0 0 20px;
  }

  .fixed {
    position: fixed;
    margin-top: -210px;
    margin-left: -33px;
  }

  .relative {
    position: relative;
  }

  .more {
    margin: -10px 0 0 0;

    a { 
      color: $text-dark;
      width: 100px;

      &:hover {
        color: $comp1-dark;
        cursor: pointer;
      }
    }
  }
}

@media screen and (max-width: $break-small){
  #listings-page,
  #home-page {

    .main-col {
      display: block;
      width: 100%
    }

    .title-bar {

      .top {
        height: 120px;
      }

      .listing-location {
        margin-left: 0 !important;
      }
      
      .listing-nums {
        width: 100px;
        float: left;
        margin-top: 20px;
      }

      .add-spot-btn {
        margin-top: 5px;
      }

      .main-col {
        padding: 0;
      }

      .side-col {
        display: none;
      }
    }

    .listing {
      height: 100px;

      .spot-pic {
        height: 50px;
        width: 50px;
        margin-top: 0;
        display: inline-block;
      }

      .spot-pic {
        vertical-align: top;
        margin-top: 2px;
      }

      .info {
      }

      .title {
        @include text-overflow();
        font-size: 14px;
        margin-top: -3px;
        max-width: 180px;
      }

      .address {
        @include text-overflow();
        font-size: 11px;
        margin: -3px 0;
        max-width: 180px;
      }

      .rating {
        display: none;
      }

      .box {
        height: 20px;
        width: 20px;

        h6 {
          font-size: 8px;
          margin-top: 5px;
        }
      }

      .watchers {
        font-size: 10px;
      }

      .current-status {
        display: block;
        margin: 0 0 0 20px;
        width: 100%;

        .status {
          display: inline-block;
          font-size: 14px;
          float: left;
          margin: -40px 0 0 120px;
        }

        h4 {
          font-size: 12px;
        }
        h5 {
          font-size: 9px;
          margin-top: -5px;
        }
      }

      hr {
        width: 95%;
      }
    }

    .side-col {
      float: none;
      margin: 10px 0 0 10px;
      position: relative;
    }
  }
}

/******************
*** Home Page
*******************/
#home-page {
  min-height: 400px;

  .favit-text {
    color: $acc-dark;
  }

  .title-bar {
    padding-bottom: 0px;

    .listing-nums {
      width: 250px;
    }
  }

  .side-col {
    margin-bottom: 10px;
  }
}

@media screen and (max-width: $break-small){
  #home-page {
    .title-bar {
      .listing-nums {
        margin: 2px 0 0 0;
        width: 120px;
      }

      .favorites-title {
        margin: 0;
      }

      .top {
        height: auto;
      }
    }
  }
}
/* ... */

